--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "build": "parcel build index.html"
   },
   "author": "Adefolami",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "parcel": "^2.12.0"
+  }
 }
